# mcp_best_practices

./: .gitignore  CHANGELOG.md  CLAUDE.md  MEMORY.md  PROJECT_STATE.md  README.md  Taskfile.yml  decisions.md  mkdocs.yml  mypy.ini  plan.md  ruff.toml  todo.md
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
01-fundamentals/: guidebook.md
01-fundamentals/server-python/: README.md  pyproject.toml
01-fundamentals/server-python/src/mcp_fundamentals/: __init__.py  catalog.py  hello.py
01-fundamentals/server-python/tests/: test_catalog.py  test_hello.py
01-fundamentals/server-typescript/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
01-fundamentals/server-typescript/src/: hello.ts
01-fundamentals/server-typescript/test/: hello.test.ts
01-fundamentals/slides/: index.html
02-architecture/: README.md  guidebook.md  pyproject.toml
02-architecture/registry-demo/: server.json
02-architecture/registry-demo/.well-known/mcp/: server-card.json
02-architecture/slides/: index.html
02-architecture/src/mcp_architecture/: __init__.py  composition.py  handles.py  registry.py
02-architecture/tests/: test_composition.py  test_handles.py  test_registry.py
03-tooling/: README.md  guidebook.md  pyproject.toml
03-tooling/slides/: index.html
03-tooling/src/mcp_tooling/: __init__.py  annotations.py  contacts.py  eval_harness.py
03-tooling/tests/: test_annotations.py  test_contacts.py  test_eval.py
04-security/: guidebook.md
04-security/capstone/: README.md  pyproject.toml
04-security/capstone/src/mcp_capstone/: __init__.py  guardrails_middleware.py  server.py
04-security/capstone/tests/: test_capstone.py
04-security/guardrails/: README.md  pyproject.toml
04-security/guardrails/src/mcp_guardrails/: __init__.py  detectors.py  redaction.py
04-security/guardrails/tests/: test_detectors.py  test_redaction.py
04-security/oauth-confused-deputy/: README.md  pyproject.toml
04-security/oauth-confused-deputy/src/mcp_oauth_demo/: __init__.py  authz.py  flows.py  resource_server.py
04-security/oauth-confused-deputy/tests/: test_confused_deputy.py
04-security/policy-gateway/: README.md  pyproject.toml
04-security/policy-gateway/src/mcp_policy_gateway/: __init__.py  adapter.py  audit.py  policy.py
04-security/policy-gateway/tests/: test_adapter.py  test_audit.py  test_policy.py
04-security/signed-registry/: README.md  pyproject.toml
04-security/signed-registry/src/mcp_signed_registry/: __init__.py  registry.py  verifiers.py
04-security/signed-registry/tests/: test_registry.py
04-security/slides/: index.html
04-security/threat-models/: README.md  auth-server.md  client.md  data-stores.md  host.md  llm.md  server.md
05-use-cases-ecosystem/: README.md  ecosystem-map.md  guidebook.md  pyproject.toml
05-use-cases-ecosystem/slides/: index.html
05-use-cases-ecosystem/src/mcp_usecases/: __init__.py  a2a_bridge.py  k8s.py
05-use-cases-ecosystem/tests/: test_a2a_bridge.py  test_k8s.py
06-exam-prep/: guidebook.md
06-exam-prep/curriculum/: README.md
06-exam-prep/quiz-app/: README.md  pyproject.toml  railway.json
06-exam-prep/quiz-app/src/mcp_quiz/: __init__.py  app.py  bank.py  models.py  questions.yaml  scoring.py
06-exam-prep/quiz-app/src/mcp_quiz/static/: app.js  index.html  styles.css
06-exam-prep/quiz-app/tests/: test_api.py  test_bank.py  test_quality.py  test_scoring.py
06-exam-prep/slides/: index.html
docs/: BUILD_PLAN.md  best-practice-verification-2026-06-24.md  index.md  requirements.txt  spec-currency.md
docs/research/: exam-curriculum-2026-06-23.md  mcp-sme-portfolio-research-2026-06.md  version-currency-2026-06-23.md
docs/research/spikes/: a2a-integration.md  architecture-registry.md  exam-item-writing.md  fastmcp-advanced.md  kubernetes-mcp-server.md  mcp-question-content.md  mcp-rc-2026-07-28-readiness.md  quiz-app-railway.md  tool-design-eval.md  typescript-sdk.md
