[project]
name = "mcp-tooling"
version = "0.1.0"
description = "Tool design: a good-vs-anti-pattern tool pair and a deterministic eval harness"
requires-python = ">=3.11"
dependencies = ["fastmcp>=3.4,<4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_tooling"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6", "mypy>=1.11"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
