[project]
name = "mcp-usecases"
version = "0.1.0"
description = "Use cases: a read-only Kubernetes MCP server and an MCP-to-agent (A2A) delegation bridge"
requires-python = ">=3.11"
dependencies = ["fastmcp>=3.4,<4", "kubernetes>=36,<37"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_usecases"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
