[project]
name = "mcp-fundamentals"
version = "0.1.0"
description = "Fundamentals: idiomatic FastMCP hello server and a typed, paginated catalog server"
requires-python = ">=3.11"
dependencies = ["fastmcp>=3.4,<4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_fundamentals"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
