[project]
name = "mcp-oauth-confused-deputy"
version = "0.1.0"
description = "Demo: RFC 8707 audience binding defeats the confused-deputy attack; token passthrough is forbidden"
requires-python = ">=3.11"
dependencies = ["cryptography>=42"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_oauth_demo"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.15.20", "mypy>=1.11"]

[tool.pytest.ini_options]
testpaths = ["tests"]
