[project]
name = "mcp-policy-gateway"
version = "0.1.0"
description = "Policy-enforcing gateway core for MCP: allowlist, per-client consent, OPA-style rules, SIEM audit"
requires-python = ">=3.11"
dependencies = ["fastmcp>=3.4,<4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_policy_gateway"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6", "mypy>=1.11"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
