[project]
name = "mcp-signed-registry"
version = "0.1.0"
description = "Provenance-verifying MCP server registry: admit only trusted-signer, validly-signed servers"
requires-python = ">=3.11"
dependencies = ["cryptography>=42"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_signed_registry"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[tool.pytest.ini_options]
testpaths = ["tests"]
