[project]
name = "mcp-quiz"
version = "0.1.0"
description = "An MCP exam quiz app: a versioned question bank, pure scoring, and a FastAPI service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.1",
    "uvicorn>=0.30",
    "pyyaml>=6",
    "structlog>=24",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_quiz"]

[tool.hatch.build.targets.wheel.force-include]
"src/mcp_quiz/questions.yaml" = "mcp_quiz/questions.yaml"
"src/mcp_quiz/static/index.html" = "mcp_quiz/static/index.html"
"src/mcp_quiz/static/styles.css" = "mcp_quiz/static/styles.css"
"src/mcp_quiz/static/app.js" = "mcp_quiz/static/app.js"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.15.20", "httpx>=0.27", "mypy>=1.11"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Starlette's TestClient warns that httpx will be replaced by httpx2; third-party, not our code.
filterwarnings = ["ignore:Using `httpx` with `starlette.testclient`"]
